<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Yellow_Primary"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="291dp"
        android:layout_height="118dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/rock_paper_scissor"
        android:textAlignment="textEnd"
        android:textColor="@color/Orange_Primary"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.063"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/rock"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo_asset" />

    <Button
        android:id="@+id/button5"
        android:layout_width="64dp"
        android:layout_height="71dp"
        android:layout_marginTop="68dp"
        android:backgroundTint="@color/Orange_Primary"
        android:text="@string/_5"
        android:textColor="@color/white"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button7"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button7"
        android:layout_width="64dp"
        android:layout_height="71dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="80dp"
        android:backgroundTint="@color/Orange_Primary"
        android:text="@string/_7"
        android:textColor="@color/white"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button3"
        android:layout_width="64dp"
        android:layout_height="71dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="68dp"
        android:backgroundTint="@color/Orange_Primary"
        android:text="@string/_3"
        android:textColor="@color/white"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>