<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Yellow_Primary"
    tools:context=".Game">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/w_d_l_0_0_0"
        android:textColor="@color/Orange_Primary"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/round_1_7"
        android:textColor="@color/Orange_Primary"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.865"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="215dp"
        android:layout_height="196dp"
        android:contentDescription="@string/todo"
        android:scaleX="0.6"
        android:scaleY="0.6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.145"
        app:srcCompat="@drawable/rock"
        tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="244dp"
        android:layout_height="224dp"
        android:scaleX="0.6"
        android:scaleY="0.6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"
        app:srcCompat="@drawable/paper"
        tools:ignore="SpeakableTextPresentCheck"
        android:contentDescription="@string/todo" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="243dp"
        android:layout_height="254dp"
        android:scaleX="0.6"
        android:scaleY="0.6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton2"
        app:srcCompat="@drawable/scissor"
        tools:ignore="SpeakableTextPresentCheck"
        android:contentDescription="@string/todo" />
</androidx.constraintlayout.widget.ConstraintLayout>